src/SdlSharp.ImGui.Native/dear_bindings/dcimgui.h

//-----------------------------------------------------------------------------
// [SECTION] Forward declarations and basic types
// Auto-generated forward declarations for C header
typedef struct ImVec2_t ImVec2;
//-----------------------------------------------------------------------------

// Scalar data types
typedef unsigned int ImGuiID;      // A unique ID used by widgets (typically the result of hashing a stack of string)
typedef struct ImGuiStorage_t ImGuiStorage;                                    // Helper for key->value storage (container sorted by key)
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);      // Implied values_offset = 0, overlay_text = NULL, scale_min = FLT_MAX, scale_max = FLT_MAX, graph_size = ImVec2(0, 0)
CIMGUI_API void ImGui_PlotLinesCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset /* = 0 */, const char* overlay_text /* = NULL */, float scale_min /* = FLT_MAX */, float scale_max /* = FLT_MAX */, ImVec2 graph_size /* = ImVec2(0, 0) */);
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);  // Implied values_offset = 0, overlay_text = NULL, scale_min = FLT_MAX, scale_max = FLT_MAX, graph_size = ImVec2(0, 0)
CIMGUI_API void ImGui_PlotHistogramCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset /* = 0 */, const char* overlay_text /* = NULL */, float scale_min /* = FLT_MAX */, float scale_max /* = FLT_MAX */, ImVec2 graph_size /* = ImVec2(0, 0) */);
// Helper: Key->Value storage
// Typically you don't have to worry about this since a storage is held within each Window.
// We use it to e.g. store collapse state for a tree (Int 0/1)
// This is optimized for efficient lookup (dichotomy into a contiguous buffer) and rare insertion (typically tied to user interactions aka max once a frame)
// You can use it as custom user storage for temporary values. Declare your own storage if, for example:
// - You want to manipulate the open/close state of a particular sub-tree in your interface (tree node uses Int 0/1 to store their state).
// - You want to store custom debug data easily without adding or editing structures in your code (probably not efficient, but convenient)
// Types are NOT stored, so it is up to you to make sure your Key don't collide with different types.
struct ImGuiStorage_t
{
    // [Internal]
    ImVector_ImGuiStoragePair Data;
};
// - Get***() functions find pair, never add/allocate. Pairs are sorted so a query is O(log N)
// - Set***() functions find pair, insertion on demand if missing.
// - Sorted insertion is costly, paid once. A typical frame shouldn't need to insert any new pair.
CIMGUI_API void   ImGuiStorage_Clear(ImGuiStorage* self);
CIMGUI_API int    ImGuiStorage_GetInt(const ImGuiStorage* self, ImGuiID key, int default_val /* = 0 */);
CIMGUI_API void   ImGuiStorage_SetInt(ImGuiStorage* self, ImGuiID key, int val);
CIMGUI_API bool   ImGuiStorage_GetBool(const ImGuiStorage* self, ImGuiID key, bool default_val /* = false */);
CIMGUI_API void   ImGuiStorage_SetBool(ImGuiStorage* self, ImGuiID key, bool val);
CIMGUI_API float  ImGuiStorage_GetFloat(const ImGuiStorage* self, ImGuiID key, float default_val /* = 0.0f */);
CIMGUI_API void   ImGuiStorage_SetFloat(ImGuiStorage* self, ImGuiID key, float val);
CIMGUI_API void*  ImGuiStorage_GetVoidPtr(const ImGuiStorage* self, ImGuiID key);                               // default_val is NULL
CIMGUI_API void   ImGuiStorage_SetVoidPtr(ImGuiStorage* self, ImGuiID key, void* val);
// - Get***Ref() functions finds pair, insert on demand if missing, return pointer. Useful if you intend to do Get+Set.
// - References are only valid until a new value is added to the storage. Calling a Set***() function or a Get***Ref() function invalidates the pointer.
// - A typical use case where this is convenient for quick hacking (e.g. add storage during a live Edit&Continue session if you can't modify existing struct)
//      float* pvar = ImGui::GetFloatRef(key); ImGui::SliderFloat("var", pvar, 0, 100.0f); some_var += *pvar;
CIMGUI_API int*   ImGuiStorage_GetIntRef(ImGuiStorage* self, ImGuiID key, int default_val /* = 0 */);
CIMGUI_API bool*  ImGuiStorage_GetBoolRef(ImGuiStorage* self, ImGuiID key, bool default_val /* = false */);
CIMGUI_API float* ImGuiStorage_GetFloatRef(ImGuiStorage* self, ImGuiID key, float default_val /* = 0.0f */);
CIMGUI_API void** ImGuiStorage_GetVoidPtrRef(ImGuiStorage* self, ImGuiID key, void* default_val /* = NULL */);
// Advanced: for quicker full rebuild of a storage (instead of an incremental one), you may add all your contents and then sort once.
CIMGUI_API void   ImGuiStorage_BuildSortByKey(ImGuiStorage* self);
// Obsolete: use on your own storage if you know only integer are being stored (open/close all tree nodes)
CIMGUI_API void   ImGuiStorage_SetAllInt(ImGuiStorage* self, int val);
CIMGUI_API bool   ImGui_ComboObsolete(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count); // Implied popup_max_height_in_items = -1
CIMGUI_API bool   ImGui_ComboObsoleteEx(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count, int popup_max_height_in_items /* = -1 */);
CIMGUI_API bool   ImGui_ListBoxObsolete(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count); // Implied height_in_items = -1
CIMGUI_API bool   ImGui_ListBoxObsoleteEx(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count, int height_in_items /* = -1 */);