src/Sdl3Sharp.ImGui/Native/ImGuiStorage.cs

// <auto-generated>
// This file was generated by Sdl3Sharp.ImGui.Generator
// Do not modify this file directly.
// </auto-generated>

#nullable enable

using System.Runtime.InteropServices;

namespace Sdl3Sharp.ImGui.Native;

// This type is only referenced

/// <summary>
/// Helper: Key-&gt;Value storage
/// Typically you don't have to worry about this since a storage is held within each Window.
/// We use it to e.g. store collapse state for a tree (Int 0/1)
/// This is optimized for efficient lookup (dichotomy into a contiguous buffer) and rare insertion (typically tied to user interactions aka max once a frame)
/// You can use it as custom user storage for temporary values. Declare your own storage if, for example:
/// - You want to manipulate the open/close state of a particular sub-tree in your interface (tree node uses Int 0/1 to store their state).
/// - You want to store custom debug data easily without adding or editing structures in your code (probably not efficient, but convenient)
/// Types are NOT stored, so it is up to you to make sure your Key don't collide with different types.
/// </summary>
[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct ImGuiStorage
{
    /// <summary>
    /// - Get***() functions find pair, never add/allocate. Pairs are sorted so a query is O(log N)
    /// - Set***() functions find pair, insertion on demand if missing.
    /// - Sorted insertion is costly, paid once. A typical frame shouldn't need to insert any new pair.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGuiStorage_Clear")]
    public static partial void Clear(ImGuiStorage* self);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGuiStorage_GetInt")]
    public static partial int GetInt(ImGuiStorage* self, ImGuiID key, int default_val);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGuiStorage_SetInt")]
    public static partial void SetInt(ImGuiStorage* self, ImGuiID key, int val);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGuiStorage_GetBool")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool GetBool(ImGuiStorage* self, ImGuiID key, [MarshalAs(UnmanagedType.U1)] bool default_val);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGuiStorage_SetBool")]
    public static partial void SetBool(ImGuiStorage* self, ImGuiID key, [MarshalAs(UnmanagedType.U1)] bool val);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGuiStorage_GetFloat")]
    public static partial float GetFloat(ImGuiStorage* self, ImGuiID key, float default_val);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGuiStorage_SetFloat")]
    public static partial void SetFloat(ImGuiStorage* self, ImGuiID key, float val);

    /// <summary>
    /// default_val is NULL
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGuiStorage_GetVoidPtr")]
    public static partial void* GetVoidPtr(ImGuiStorage* self, ImGuiID key);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGuiStorage_SetVoidPtr")]
    public static partial void SetVoidPtr(ImGuiStorage* self, ImGuiID key, void* val);

    /// <summary>
    /// - Get***Ref() functions finds pair, insert on demand if missing, return pointer. Useful if you intend to do Get+Set.
    /// - References are only valid until a new value is added to the storage. Calling a Set***() function or a Get***Ref() function invalidates the pointer.
    /// - A typical use case where this is convenient for quick hacking (e.g. add storage during a live Edit&amp;Continue session if you can't modify existing struct)
    /// float* pvar = ImGui::GetFloatRef(key); ImGui::SliderFloat("var", pvar, 0, 100.0f); some_var += *pvar;
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGuiStorage_GetIntRef")]
    public static partial int* GetIntRef(ImGuiStorage* self, ImGuiID key, int default_val);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGuiStorage_GetBoolRef")]
    public static partial bool* GetBoolRef(ImGuiStorage* self, ImGuiID key, [MarshalAs(UnmanagedType.U1)] bool default_val);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGuiStorage_GetFloatRef")]
    public static partial float* GetFloatRef(ImGuiStorage* self, ImGuiID key, float default_val);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGuiStorage_GetVoidPtrRef")]
    public static partial nint GetVoidPtrRef(ImGuiStorage* self, ImGuiID key, void* default_val);

    /// <summary>
    /// Advanced: for quicker full rebuild of a storage (instead of an incremental one), you may add all your contents and then sort once.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGuiStorage_BuildSortByKey")]
    public static partial void BuildSortByKey(ImGuiStorage* self);

    /// <summary>
    /// Obsolete: use on your own storage if you know only integer are being stored (open/close all tree nodes)
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGuiStorage_SetAllInt")]
    public static partial void SetAllInt(ImGuiStorage* self, int val);

}
